tests/corpus/pass/phase1/248_uninit_both_arms_init.gw
fn main() -> i32 {
    let x: i32;
    let c: bool = true;
    if c {
        x = 42;
    } else {
        x = 99;
    }
    return x;
}
