tests/corpus/fail/borrow/b02_conditional_init.gw
fn main() -> i32 {
    let x: i32;
    let c: bool = true;
    if c {
        x = 5;
    }
    return x;
}
